# vst-demon-cli

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-check.yml  release.yml
installers/: installer.iss
src/: EditorWindow.cpp  EditorWindow.h  Platform.h  PluginHost.cpp  PluginHost.h  PresetManager.cpp  PresetManager.h  Utf8.h  main.cpp  vst-demon.manifest
src/linux/: Dialogs.cpp  Dialogs.h  EditorWindowX11.cpp  EditorWindowX11.h  IRunLoopImpl.h  PlatformLinux.cpp  RunLoop.cpp  RunLoop.h
src/mac/: AppMac.mm  Dialogs.h  Dialogs.mm  EditorWindowMac.h  EditorWindowMac.mm
src/win32/: EditorWindow.cpp  EditorWindow.h  PlatformWin32.cpp  WindowMessages.h  vst-demon.rc
tests/: check_pedalboard_roundtrip.py  check_preset_format.py  integration.sh
